198 ==> 364009 - Cannot use batch processing to resize images.
199 ==> 364035 - GPS correlation fails to save coordinates back to files.
200 ==> 364065 - image editor doesn't open at double click.
201 ==> 307337 - Add versioning support to libkipi interface.
202 ==> 363505 - 4.x crash on start under Windows - Need a new 5.0 installer.
203 ==> 364116 - Uninstaller doesn't remove C:\Program Files.
204 ==> 351016 - Crash in Windows when building finger-prints.
205 ==> 123455 - Add support of Image Editor actions through DBUS.
206 ==> 364333 - Random resets of several configuration values.
207 ==> 338229 - THUMBDB : digiKam does not recognize pictures in albums with unicode (Korean) characters.
208 ==> 364793 - Wrong icon usage.
209 ==> 345956 - MYSQL : Image window, extreme unstable under dates view.
210 ==> 364790 - Preview image shown too large.
211 ==> 364797 - After editing metadata, rename hangs.
212 ==> 349924 - Videos (mp4, mov, avi) do not play under OS X Yosemite when using digiKam.
213 ==> 356254 - Search order is not alphabetical.
214 ==> 364885 - Scanning Faces - Detect Faces should be default.
215 ==> 364193 - digiKam 5 crashed at start of the program all time. It worked fine until 2016-06-05.
216 ==> 351653 - Build fails, multiple unresoved refs.
217 ==> 361889 - digiKam 5 beta 5: vertical menus (left and right) not displayed properly.
218 ==> 363704 - preview thumbnails: Not updated when deleting an image.
219 ==> 364762 - Invalid mysql configuration option table_cache.
220 ==> 363697 - Album visible even after deletion [patch].
221 ==> 364882 - File rename dropdown box of options not saving past rename layout.
222 ==> 360017 - Build error: opencv_contrib is required but was not found.
223 ==> 250511 - TIF Image appears corrupted in digiKam.
224 ==> 322709 - digiKam and drkonqi crash at startup.
225 ==> 198915 - Segfault during histogram calculation.
226 ==> 354234 - Crash when changing Lens selection in Lens distortion correction dialog.