@@ -117,7 +117,6 @@ public:
 
     void legacyUpdateSplitterState(KConfigGroup& group);
     void plugNewVersionInFormatAction(EditorWindow* const q, QMenu* const menuAction, const QString& text, const QString& format);
-    void addPageUpDownActions(EditorWindow* const q, QWidget* const w);
 
 public:
 
@@ -294,14 +293,6 @@ void EditorWindow::Private::plugNewVersionInFormatAction(EditorWindow* const q, 
 
     formatMenuActionMapper->setMapping(action, format);
     menuAction->addAction(action);
-}
-
-void EditorWindow::Private::addPageUpDownActions(EditorWindow* const q, QWidget* const w)
-{
-    defineShortcut(w, Qt::Key_Down,  q, SLOT(slotForward()));
-    defineShortcut(w, Qt::Key_Right, q, SLOT(slotForward()));
-    defineShortcut(w, Qt::Key_Up,    q, SLOT(slotBackward()));
-    defineShortcut(w, Qt::Key_Left,  q, SLOT(slotBackward()));
 }
 
 }  // namespace Digikam
